<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Jalotsav
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cordntrlyot_fireauth_resetpaswrd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".FireResetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/imgcd_imges"
            android:src="@drawable/img_firebase_logo" />

        <!--Forgot Password-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password_sml"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <!--Forgot Password Message-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/forgot_password_msg"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <!--Email-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtinputlyot_fireauth_resetpaswrd_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtinptet_fireauth_resetpaswrd_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_sml"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@color/grayA8"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <!--Reset Password-->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appcmptbtn_fireauth_resetpaswrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reset_password_sml"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/prgrsbr_fireauth_resetpaswrd"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>