<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cordntrlyot_fireauth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FireSignin"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/imgcd_imges"
            android:src="@drawable/img_firebase_logo" />

        <!--Email-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtinputlyot_fireauth_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtinptet_fireauth_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_sml"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@color/grayA8"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <!--Password-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtinputlyot_fireauth_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleDrawable="@drawable/ic_password_visibility_selector">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtinptet_fireauth_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_sml"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textColorHint="@color/grayA8"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <!--Login-->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appcmptbtn_fireauth_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/signin_sml"
            android:textColor="@color/colorPrimary" />

        <!--Forgot Password-->
        <TextView
            android:id="@+id/tv_fireauth_frgtpaswrd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password_sml"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <!--Not member? Registered now-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/notmember_registernow"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgvw_fireauth_firebase"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/imgcd_imges"
                android:src="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/imgvw_fireauth_social_gp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:padding="10dp"
                android:background="@drawable/round_drwbl_white"
                android:contentDescription="@string/imgcd_imges"
                app:ico_color="@color/social_gp"
                app:ico_icon="cmd-google-plus"
                app:ico_size="40dp" />

            <ImageView
                android:id="@+id/imgvw_fireauth_social_fb"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:padding="10dp"
                android:background="@drawable/round_drwbl_white"
                android:contentDescription="@string/imgcd_imges"
                app:ico_color="@color/social_fb"
                app:ico_icon="cmd-facebook"
                app:ico_size="18dp" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/prgrsbr_fireauth"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>